# Compound

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/gui/: mod.rs  update.rs  view.rs
src/nbt/: mod.rs  nbtfile.rs
