[package]
name = "compound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
iced = { version = "0.12.1", features = ["image", "tokio"] }
image = { version = "0.25.0", default-features = false, features = ["png"] }
log = "0.4.17"
quartz_nbt = { version = "0.2.7", features = ["preserve_order"] }
rfd = { version = "0.14.1", default-features = false, features = ["tokio", "xdg-portal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
